--- a/css/s.css
+++ b/css/s.css
@@ -9,34 +9,22 @@ footer{padding-top: 69px;}
 .brand {font-size: 20px;}
 .caption_white {color: white;}
 .content { background: #0b0b0d !important;}
-
+.row { margin-bottom:15px; }
 .row_cell {padding-top: 20px;padding-bottom: 25px;color: #fff;text-shadow: 0 2px 2px rgba(0,0,0,0.6);}
+.row_cell > h1 { padding-top: 25px; }
 .text{text-align: left;}
 .navbar { margin-bottom: 0 !important; }
 @media screen and (max-width: 600px) {
-	.main_img img {height:450px}
-	.content .text {
-		margin-top: -153px;
-	}
+
 }
 @media screen and (min-width: 600px) and (max-width: 650px) {
-	.main_img img {height:490px}
-	.content .text {
-		margin-top: -135px;
-	}
+
 }
 @media screen and (min-width: 650px) and (max-width: 768px) {
-	.main_img img {height:530px}
-	.content .text {
-		margin-top: -135px;
-	}
+
 }
 @media screen and (min-width: 768px) {
-	.main_img img {height:600px}
-	.content .text {
-		margin-top: 50px;
-	}
-	
+	.right { float: right; }
 	.viber_Mobile { display: none; }
 	#icons a > img {
 		width: 60px;
@@ -44,7 +32,6 @@ footer{padding-top: 69px;}
 	}
 }
 @media screen and (max-width: 768px) {
-	.content .text h3, .content .text p { background: rgba(0,0,0, 0.38); }
 
 	.viber_PC { display: none; }
 	#icons {
@@ -76,9 +63,7 @@ footer{padding-top: 69px;}
 	color: #000 !important;
 }
 
-#about p {
-	font-size: 18px;
-}
+
 .caption_white a,
 .caption_white a:active,
 .caption_white a:visited {
@@ -93,5 +78,13 @@ footer{padding-top: 69px;}
     background-image: url(../img/icon_copy.svg);
     background-size: 100%;
 }
-
+.also {
+	color: rgba(0,0,0, 0.5);
+}
+#main {
+	font-size: 16px;
+}
+#summary, #experience, #skills {
+	font-size: 17px;
+}
 #mail-input { position:absolute; top:-40px; }
