--- a/css/s.css
+++ b/css/s.css
@@ -23,8 +23,22 @@ footer{padding-top: 69px;}
 @media screen and (min-width: 650px) and (max-width: 768px) {
 
 }
+@media screen and (min-width: 768px) and (max-width: 992px) {
+	.change_lang {
+		position: absolute;
+		right: 10%;
+		margin: 14px 18px 0 0;
+	}
+}
+@media screen and (min-width: 992px) {
+	.change_lang {
+		float: right;
+		margin: 14px 18px 0 0;
+	}
+}
 @media screen and (min-width: 768px) {
 	.right { float: right; }
+	#cl_f { display: none; }
 	.viber_Mobile { display: none; }
 	#icons a > img {
 		width: 60px;
@@ -32,7 +46,10 @@ footer{padding-top: 69px;}
 	}
 }
 @media screen and (max-width: 768px) {
-
+	.change_lang {
+		float: right;
+		margin: 14px 18px 0 0;
+	}
 	.viber_PC { display: none; }
 	#icons {
 		text-align: center; 
